--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,10 @@ stages:
             displayName: Download Bedrock orchestration script
             env:
               BEDROCK_BUILD_SCRIPT: https://raw.githubusercontent.com/Microsoft/bedrock/master/gitops/azure-devops/build.sh
-
+          - task: HelmInstaller@1
+            inputs:
+              helmVersionToInstall: "2.16.3"
+              
           - task: ShellScript@2
             displayName: Validate fabrikate definitions
             inputs:
